--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="shortcut icon" href="./logo3.png">
     </head>
-    <body>
+    <body class="body">
     <header>
         <div class="logo">
-            <a href="./index.html">
-                <img src="logo3.png" height="80"/>
-            </a>
+            <a href="./index.html" title="Biology DM"> <img src="logo3.png" height="80"/></a>
         </div>
         <div class="menu">
             <ul>
@@ -30,5 +28,14 @@
             </form>
         </div>
     </header>
+    <footer class="main-footer">
+        <div class="connection">
+            <ul>
+                <li><a href="https://www.instagram.com" target="_blank" title="instagram"> <img src="./insta-logo.jpg" width="40" height="40"></a></li>
+                <li><a href="https://web.telegram.org/" target="_blank" title="telegram"> <img src="./telegram.png" width="40" height="40"></a></li>
+                <li><a href="https://www.vk.com" target="_blank" title="vk"> <img src="./vk.png" width="40" height="40"></a></li>
+            </ul>
+        </div>
+    </footer>
     </body>
 </html>
