--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <footer class="main-footer">
         <div class="connection">
             <ul>
-                <li><a href="https://www.instagram.com" target="_blank" title="instagram"> <img src="./insta-logo.jpg" width="40" height="40"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank" title="instagram"> <img src="./insta-logo.png" width="40" height="40"></a></li>
                 <li><a href="https://web.telegram.org/" target="_blank" title="telegram"> <img src="./telegram.png" width="40" height="40"></a></li>
                 <li><a href="https://www.vk.com" target="_blank" title="vk"> <img src="./vk.png" width="40" height="40"></a></li>
             </ul>
