--- a/index.html
+++ b/index.html
@@ -6,36 +6,41 @@
         <link href="style.css"
         rel="stylesheet" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="shortcut icon" href="./logo3.png">
+        <link rel="shortcut icon" href="./images/logo3.ico">
     </head>
     <body class="body">
-    <header>
-        <div class="logo">
-            <a href="./index.html" title="Biology DM"> <img src="logo3.png" height="80"/></a>
-        </div>
-        <div class="menu">
+        <div class="wrapper">
+            <header class="header">
+            <div class="logo">
+            <a href="./index.html" title="Biology DM"> <img src="./images/logo3.png" height="80" alt="logo"/></a>
+            </div>
+            <div class="menu">
             <ul>
                 <li><a href="./index.html">Главная</a></li>
                 <li><a href="./news.html">Новости</a></li>
                 <li><a href="./video.html">Видео</a></li>
                 <li><a href="./contacts.html">Контакты</a></li>
             </ul>
-        </div>
-        <div class="search">
+            </div>
+            <div class="search">
             <form>
             <input type="text" placeholder="Поиск по сайту">
             <button type="submit"></button>
             </form>
-        </div>
-    </header>
-    <footer class="main-footer">
-        <div class="connection">
+            </div>
+            </header>
+            <main class="main">
+                Я главный
+            </main>
+            <footer class="footer">
+            <div class="connection">
             <ul>
-                <li><a href="https://www.instagram.com" target="_blank" title="instagram"> <img src="./insta-logo.png" width="40" height="40"></a></li>
-                <li><a href="https://web.telegram.org/" target="_blank" title="telegram"> <img src="./telegram.png" width="40" height="40"></a></li>
-                <li><a href="https://www.vk.com" target="_blank" title="vk"> <img src="./vk.png" width="40" height="40"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank" title="Instagram"> <img src="./images/insta-logo.ico" width="40" height="40" alt="insta"></a></li>
+                <li><a href="https://web.telegram.org/" target="_blank" title="Telegram"> <img src="./images/telegram.ico" width="40" height="40" alt="tg"></a></li>
+                <li><a href="https://www.vk.com" target="_blank" title="Vk"> <img src="./images/vk.ico" width="40" height="40" alt="vk"></a></li>
             </ul>
+            </div>
+            </footer>
         </div>
-    </footer>
     </body>
 </html>
